--- a/src/main/resources/templates/admin-side.html
+++ b/src/main/resources/templates/admin-side.html
@@ -41,7 +41,7 @@
             </a>
             <a href="/exchange/exchange-orders" class="flex items-center px-4 py-3 text-gray-300 hover:bg-slate-700 rounded-lg">
                 <i class="fas fa-exchange-alt mr-3"></i>
-                Orders
+                Exchange Orders
             </a>
 
             <a href="/admin/admin-customers" class="flex items-center px-4 py-3 text-gray-300 hover:bg-slate-700 rounded-lg">
